<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_add_food"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/title_add_food" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_comment_black_24dp"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_feedback"
        android:icon="@drawable/ic_feedback_black_24dp"
        android:title="@string/title_feedback" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>
