<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.btp.chealth.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_feedback"
        android:name="com.btp.chealth.fragments.FeedbackFragment"
        android:label="@string/title_feedback"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.btp.chealth.fragments.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.btp.chealth.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_add_food"
        android:name="com.btp.chealth.fragments.AddFoodFragment"
        android:label="@string/title_add_food"
        tools:layout="@layout/add_food_fragment" />
</navigation>
