<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:layout_margin="4dp"
    android:elevation="2dp"
    android:background="@drawable/round_border_white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:contentDescription="@string/news_article_image"
        android:id="@+id/articleImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/news_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:padding="4dp"
        android:id="@+id/title"
        android:layout_marginStart="4dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:text="Title of the news"
        android:gravity="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/articleImage"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/articleImage"/>

    <Button
        android:id="@+id/openFullArticle"
        android:layout_marginStart="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_full_article"
        android:textSize="16sp"
        android:padding="4dp"
        android:textColor="@android:color/white"
        android:background="@drawable/round_border_light_blue"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        android:padding="4dp"
        android:text="@string/title_add_food"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/articleImage"
        app:layout_constraintHorizontal_bias="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>